--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,7 +5,11 @@ html(lang="ko")
         link(rel="stylesheet" href="https://unpkg.com/mvp.css@1.10.2/mvp.css")
     body 
         header  
-            h1=pageTitle 
+            h1=pageTitle
+            nav 
+                ul 
+                    li 
+                        a(href="/videos/upload") Upload Video
         main 
             block content
     include partials/footer
